--- a/DeccanChargers.html
+++ b/DeccanChargers.html
@@ -56,13 +56,13 @@ header{
 
 <div class="ui sidebar vertical top inverted menu phone only" style="background: url('images/cardback.jpg');font-family: 'Molle', cursive;">
   <a id="toggle1"href="#" class="active item"> <i class="sidebar icon"></i>Menu</a>
-<a href="#" class="item">Home</a>
-<a href="#" class="item">Messages</a>
-<a href="#" class="item">Friends</a> 
+<a href="DeccanChargers.html" class="item">Home</a>
+<a href="http://messages.com/" class="item">Messages</a>
+<a href="http://friends.com/" class="item">Friends</a> 
           <input type="text" placeholder="Search..." style="margin-left:15px;margin-top:10px;">
           <i class="search link icon"></i>
        
-<a href="#" class="item">Log Out</a>
+<a href="index.html" class="item">Log Out</a>
 </div>
 <div class="ui stackable basic icon top fixed menu phone only" style="background: url('images/cardback.jpg');">
   <a id="toggle" class="item" style="color:white;font-family: 'Molle', cursive;">
@@ -105,7 +105,7 @@ $('#toggle1').click(function(){
           <i class="search link icon"></i>
         </div>
       </div>
-      <a class="item" href="html/index.html">
+      <a class="item" href="index.html">
         <i class="Sign Out big icon"></i>
         <h1 style="font-family: 'Molle', cursive;letter-spacing:2px;font-size:20px;">Logout</h1>
       </a>
