--- a/DeccanChargers.html
+++ b/DeccanChargers.html
@@ -59,13 +59,13 @@ header{
 
 <div class="ui sidebar vertical top inverted menu phone only" style="background: url('images/cardback.jpg');font-family: 'Molle', cursive;">
   <a id="toggle1"href="#" class="active item"> <i class="sidebar icon"></i>Menu</a>
-<a href="DeccanChargers.html" class="item">Home</a>
-<a href="http://messages.com/" class="item">Messages</a>
-<a href="http://friends.com/" class="item">Friends</a> 
+<a href="DeccanChargers.html" class="item"> <i class="home icon"></i>Home</a>
+<a href="http://messages.com/" class="item"> <i class="announcement icon"></i>Messages</a>
+<a href="http://friends.com/" class="item"><i class="info circle big icon"></i>Friends</a> 
           <input type="text" placeholder="Search..." style="margin-left:15px;margin-top:10px;">
           <i class="search link icon"></i>
        
-<a href="index.html" class="item">Log Out</a>
+<a href="index.html" class="item"><i class="sign out icon"></i>Log Out</a>
 </div>
 <div class="ui stackable basic icon top fixed menu phone only" style="background: url('images/cardback.jpg');">
   <a id="toggle" class="item" style="color:white;font-family: 'Molle', cursive;">
@@ -119,16 +119,19 @@ $('#toggle1').click(function(){
 <div class="ui grid computer only">
 <div class="ui shape">  <!--Banner -->
   <div class="ui sides">
-<div class="ui banner side computer only"><img style="margin-top:200px;"src="images/banner.jpg"></div>
-  <div class="ui banner active side computer only"><img style="margin-top:200px;"src="images/banner2.jpg"></div>
-  <div class="ui banner  side"><img style="margin-top:200px;"src="images/banner3.jpg"></div>
+<div class="ui banner side computer only"><a href="#"><img style="margin-top:200px;"src="images/banner.jpg"></a></div>
+  <div class="ui banner active side computer only"><a href="#"><img style="margin-top:200px;"src="images/banner2.jpg"></a></div>
+  <div class="ui banner  side"><a href="#"><img style="margin-top:200px;"src="images/banner3.jpg"></a></div>
 </div>
 </div>
 </div>
 <script>
+
 setInterval(function() {
   $('.ui.shape').shape('flip over');
 },4000);
+
+
 </script>
 
 <div class="cardback">
