--- a/DeccanChargers.html
+++ b/DeccanChargers.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Sample Site</title>
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js">
 </script>
@@ -10,6 +10,7 @@
 <link href="https://fonts.googleapis.com/css?family=Monofett" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Molle:400i" rel="stylesheet">
 <script type="text/javascript" src="dist/semantic.min.js"></script>
+
 <style>
 body{
   background: url('images/cardback.jpg');
@@ -18,8 +19,7 @@ header{
   background: url('images/cardback.jpg');
 }
 .mainhead:hover{
-  font-size: 42px;
-  
+  font-size: 42px;  
 }
   .tem.log.hover{
     font-size: 100px;
@@ -65,7 +65,7 @@ header{
           <input type="text" placeholder="Search..." style="margin-left:15px;margin-top:10px;">
           <i class="search link icon"></i>
        
-<a href="index.html" class="item"><i class="sign out icon"></i>Log Out</a>
+<a href="index.html" class="item"><i class="info circle big icon"></i>Log Out</a>
 </div>
 <div class="ui stackable basic icon top fixed menu phone only" style="background: url('images/cardback.jpg');">
   <a id="toggle" class="item" style="color:white;font-family: 'Molle', cursive;">
