--- a/form.html
+++ b/form.html
@@ -1,12 +1,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Model Demo</title>
+<title>form</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="dist/semantic.min.css">
 <link href="https://fonts.googleapis.com/css?family=Molle:400i" rel="stylesheet">
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="C:\Users\admin\Desktop\Deccan Chargers\dist\semantic.min.js"></script>
+<script type="text/javascript" src="dist\semantic.min.js"></script>
 <style>
 body{
 background: url('images/cardback.jpg');
